# skynet-aws-ses-stack

./: .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  ses_domain_setup.py
ses_domain_setup/: __init__.py  aws_operations.py  cli.py  dns_auditor.py  models.py  reporting.py
terraform/: api_gateway.tf  iam.tf  lambda.tf  main.tf  outputs.tf  variables.tf
terraform/lambda/: send_email.py
terraform/modules/ses-sender/: README.md  main.tf  ses_helper.py
tests/: __init__.py  conftest.py  test_aws_operations.py  test_cli.py  test_dns_auditor.py  test_models.py  test_reporting.py
