[project]
name = "ses-domain-setup"
version = "1.0.0"
description = "Automate AWS SES domain verification and DNS record management for Route 53"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0"
authors = [
    {name = "Jon Price", email = "jon@jonprice.io"}
]
keywords = ["aws", "ses", "route53", "dns", "email"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3",
    "click",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "moto[ses,route53]",
    "flake8",
    "mypy",
    "boto3-stubs[ses,route53]",
]

[project.scripts]
ses-domain-setup = "ses_domain_setup.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", ".venv", "build", "dist"]
